--- a/css/fixed_field.css
+++ b/css/fixed_field.css
@@ -1,21 +1,6 @@
-/* @override http://rxnix.com/fixed_field.css */
 
-/* @override http://myparse.net/rxnix.com/fixed_field.css */
-
-/* @override http://rxnix.com/fixed_field.css */
-
-/* @override 
-	http://www.rxnix.com/fixed_field_2.css
-	http://rxnix.com/fixed_field_2.css
-*/
-
-legend{						
-	position: relative; top: -4.2em;
-	font-weight: bold;padding-left: 10px;border-left: solid maroon .5em;
-	font-size: 1em;clear: Both;float: left;
-}
-
-html{font-family: Arial, san-serif;
+html{
+	font-family: Arial, san-serif;
 }
 
 #header{
@@ -23,6 +8,44 @@ html{font-family: Arial, san-serif;
 	height: auto;
 }
 
+#header h1{
+	color: maroon;
+	font-weight: bold;
+	font-style: italic;
+	font-size: 2.5em;
+}
+
+#header form.main_form fieldset ul {
+	float: left;margin-top: -3.75em;width: 8em;
+}
+
+#header form.main_form fieldset ul li {
+	width: 15em;float: left;
+}
+
+a{
+	text-decoration: none;
+}
+
+a:hover{
+	text-decoration: underline;
+}
+
+#id_types a{
+	padding: .5em 0;
+	float:left;
+}
+
+#simple_form a {
+	padding-left: 4em;
+	margin-top: .75em;
+}
+
+legend{						
+	position: relative; top: -4.2em;
+	font-weight: bold;padding-left: 10px;border-left: solid maroon .5em;
+	font-size: 1em;clear: Both;float: left;
+}
 
 #simple_form {
 	width: 53.65em;
@@ -31,7 +54,13 @@ html{font-family: Arial, san-serif;
 }
 
 #simple_form legend {
-margin-top: 4.4em;margin-right: 2em;
+	margin-top: 4.4em;
+	margin-right: 2em;
+}
+
+.main_form fieldset{
+	border: none;
+	width: 10em;float: left;
 }
 
 #help em{
@@ -42,7 +71,7 @@ margin-top: 4.4em;margin-right: 2em;
 }
 
 #header form.main_form {
-margin-left: 7em;width: 60em;
+	margin-left: 7em;width: 60em;
 }
 
 #page {
@@ -55,75 +84,46 @@ ul{
 
 }
 
-hr{height: 1px;border: dotted maroon 1px;
-width: 63em;clear:both;}
-
 label{
 	font-size: .85em;
 	white-space: nowrap;
 }
-
-
-
 
 #menu li{
 	width: 150px;float: left;
 	text-align: center;
 }
 	
-	#help img{
-	float: left;margin: 10px 10px 80px 10px;
-}
-
-#help ul li a {
-	text-align:center; width: 100%;
-}
-
-img.bg_black {
+img.bg_black{
 	background-color: blue;
 }
 
-#header h1 {
-	color: maroon;
-	font-weight: bold;
-	font-style: italic;
-	font-size: 2.5em;
+#content{
+	width: 60em;
+	float: left;border-bottom: solid maroon 4px;
 }
 
-#content{width: 60em;
-float: left;border-bottom: solid maroon 4px;
-}
-
-#content p.term_result {border-top: solid maroon .25em;
+#content p.term_result {
+	border-top: solid maroon .25em;
 	padding: .925em .5em;text-align:center;margin: 0;
 }
 
-#simple_form a {
-	padding-left: 4em;margin-top: .75em;
-}
 
 #content li{
-float: left;clear: left;
+	float: left;clear: left;
 }
 
 #content ul{
-
-float: left;
-
+	float: left;
 }
 
 #content ul li ul {
 	min-height: 8.45em;
 	border: solid maroon .15em;
-
-margin: .25em;
+	margin: .25em;
 	width: 19.15em;float: left;
 }
 
-.main_form fieldset{
-	border: none;
-	width: 10em;float: left;
-}
 .property{
 	clear: both;
 	color: maroon;
@@ -136,63 +136,33 @@ margin: .25em;
 	border: none;
 	}
 
-
-#header form.main_form fieldset ul {
-float: left;margin-top: -3.75em;width: 8em;
-}
-
-#header form.main_form fieldset ul li {
-	width: 15em;float: left;
-}
-
-
-
-
 .record_rxcui{
-	
 	font-weight: bold;
 	font-family: "Courier New", Courier, mono;
 	padding: .4em .55em;margin: 0;
-
 	width: 18.05em;
 	margin-bottom: .5em;
 	letter-spacing: .14em;background-color: lightgray;
 	z-index: -2;
 }
-#help {
-	width: 60em;
-	border-top: solid maroon .25em;
-	float: left;
-
-}
-
-a{
-	text-decoration: none;
-}
-
-a:hover{
-	text-decoration: underline;
-}
 
 .record_umlscui {
-
 	font-weight: bold;
-float: right;
-text-align: right;
-width: 18.15em;
-padding:  .3em .5em;
-letter-spacing: .11em;
-margin-top: .75em;
-background-color: gray;
-
+	float: right;
+	text-align: right;
+	width: 18.15em;
+	padding:  .3em .5em;
+	letter-spacing: .11em;
+	margin-top: .75em;
+	background-color: gray;
 }
 
 .record_umlscui a{
 	color: white;
-
 }
 
-.record_name {	clear: both;min-height: 3em;padding: .45em;text-align: center;
+.record_name {
+	clear: both;min-height: 3em;padding: .45em;text-align: center;
 	letter-spacing: .09em;width: 18.3em;
 	font-weight: bold;
 }
@@ -200,17 +170,31 @@ background-color: gray;
 
 .record_synonym{
 	font-size: .98em;
-line-height: .99em;
-text-align: center;
-width: 18.8em;
-padding: .4em;
+	line-height: .99em;
+	text-align: center;
+	width: 18.8em;
+	padding: .4em;
 	font-style: italic;
 }
 
+#help {
+	width: 60em;
+	border-top: solid maroon .25em;
+	float: left;
+
+}
 
 #help ul li {
 	width: 45%;float: left;
 padding: 1.5em;
+}
+
+#help img{
+	float: left;margin: 10px 10px 80px 10px;
+}
+
+#help ul li a{
+	text-align:center; width: 100%;
 }
 
 #stats {
