--- a/public/css/ndf.css
+++ b/public/css/ndf.css
@@ -1,19 +1,17 @@
-/* @override http://myparse.net/sb6/public/css/ndf.css */
-
-/* @override http://www.myparse.net/sb5/public/css/ndf.css */
-
-/* @override http://www.myparse.net/sb5/public/css/ndf.css */
-
-/* @override http://rxnix.com/rxNormRef_php/public/css/ndf.css */
-
-/* @override http://myparse.net/sb5/public/css/ndf.css */
-
 /* @override 
+	http://myparse.net/sb6/public/css/ndf.css
+	http://www.myparse.net/sb5/public/css/ndf.css
+	http://www.myparse.net/sb5/public/css/ndf.css
+	http://rxnix.com/rxNormRef_php/public/css/ndf.css
+	http://myparse.net/sb5/public/css/ndf.css
 	http://myparse.net/sb5/public/css/ndf.css
 	http://myparse.net/sb4/rxNormRef_php/public/css/ndf.css
-
+	http://myparse.net/sb7/public/css/ndf.css
 */
 
+#ndf_content ul {
+	margin-bottom: 1.5em;
+}
 #ndf_content ul li.d_int_comment ul {
 width: 50em;clear: both;
 padding: 1em;
@@ -63,7 +61,12 @@ float: right;clear:both;
 }
 
 #ndf_content ul li.pname {
-width: 45em;font-size: 1.3em;
+width: 43.5em;font-size: 1.3em;padding: .5em 0 .5em 0em;
+
+}
+
+#ndf_content ul li.pname ul li.conceptName a {
+	color: black;
 }
 
 li.gRole{
@@ -72,8 +75,14 @@ text-align: center;
 }
 
 #ndf_content ul li.cname {
-width: 12em;margin-left: 2em;
+width: 11.51em;
+	font-size: 1.21em;
+	
+}
 
+.cname a{
+color: navy;
+	
 }
 
 #header form.main_form fieldset ul {
@@ -86,6 +95,11 @@ width: 12em;margin-left: 2em;
 
 a{
 	text-decoration: none;
+}
+
+#ndf_content ul li.pname ul li.conceptName a {
+	color: red;
+	margin-left:-1em
 }
 
 a:hover{
@@ -218,7 +232,7 @@ float: left;
 	margin: .0 .50em;
 }
 
-#ndf_content ul p {
+#ndf_content ul p,#ndf_content ul strong{
 margin: 1.1em;
 }
 
@@ -410,13 +424,19 @@ margin: .15em .35em;
 }
 
 #help ul li {
-	width: 45%;float: left;
-padding: 1.5em;
+	width: 19.06em;float: left;
+padding: .5em;
+}
+
+#help p {
+	clear: both;
 }
 
 #help img{
-	float: left;margin: 10px 10px 80px 10px;
+	float: left;margin: 1em 3.29em;
 }
+
+
 
 #help ul li a{
 	text-align:center; width: 100%;
@@ -440,14 +460,14 @@ width: auto;
 }
 
 #ndf_content ul.ndf_menu {border-top: solid maroon .2em; border-bottom: solid maroon .2em;padding-top: .45em;
-	float: left;margin-top: -.9em;
+	float: left; margin-top: -1.5em;margin-bottom: 0;
 }
 
 
 .ndf_menu li{
-	float: left;width: 14em;height: 2.5em;text-align:center;
-	font-weight: bold;
-	letter-spacing: .1em;
+	float: left;width: 19em;text-align:center;
+	font-weight: bold;padding: .5em 0;
+	
 }
 
 .ndf_menu a{
