--- a/public/css/ndf.css
+++ b/public/css/ndf.css
@@ -1,5 +1,8 @@
+/* @override http://myparse.net/sb7/public/css/ndf.css */
+
+
 #ndf_content ul {
-	margin-bottom: 1.5em;
+
 }
 #ndf_content ul li.d_int_comment ul {
 width: 50em;clear: both;
@@ -17,35 +20,48 @@ border: none;}
 va_status,vandf_record{
 padding: .25em;
 }
-html{
-	font-family: Arial, san-serif;
+html{background-color:gray;
+	font-family: "Lucida Grande", Lucida, Verdana, sans-serif;
+}
+
+#page{width:58em;margin:auto;background-color:white;
 }
 
 #header img{
 	display:none;
 }
 
-#header{padding: 0;	width: 100%;
+#header{padding: 0;	margin-top: 1em;
 float: left;
 	height: 13em;
+   width:100%;
 	background: url(http://myparse.net/sb5/public/img/new_logo.gif) no-repeat;
+background-color:white;padding:.39em;
 }
+
+/* @group My Group */
+
+
+
+/* @end */
 
 #header h1{
 	color: maroon;
 	font-weight: bold;
-	font-style: italic;
-	font-size: 2.5em;float: right;
+	font-size: 2.5em;float: right;margin-right:.5em; margin-top: 2em;
 }
 
 #header a{
-float: right;clear:both;
+float: right;clear:both; margin-right:1em;
 }
 
 #ndf_content ul li.pname {
-width: 43.5em;font-size: 1.3em;padding: .5em 0 .5em 0em;
-
+float: right;clear:left;margin: .75em;
+	font-style: italic;
+	text-decoration: none; border-right: solid maroon .25em;
 }
+
+
 
 #ndf_content ul li.pname ul li.conceptName a {
 	color: black;
@@ -56,15 +72,28 @@ width: 45em;
 text-align: center;
 }
 
-#ndf_content ul li.cname {
-	width: 11.39em;
+#ndf_content ul li.cname {clear: right;
+	width: 24%;
 	font-size: 1.21em;
+	margin: 0;
+	border-left: solid maroon .4em;margin: .15em 0;
+}
+
+#ndf_content ul li.cname:hover{
+	border-left: solid white .4em;
+
+}
+
+#ndf_content ul li.pname:hover{
 	
+	border-right-color: white;
 }
 
 .cname a{
 	color: navy;
 }
+
+
 
 a{
 	text-decoration: none;
@@ -91,10 +120,6 @@ a:hover{
 	text-align: center;
 }
 
-#page {
-	margin: 1em auto ;
-	width: 60em;
-}
 
 ul{
 	list-style-type: none;margin: 0;padding: 0;
@@ -105,11 +130,11 @@ img.bg_black{
 	background-color: blue;
 }
 
-#ndf_content{
-	width: 100%;
+#ndf_content{background-color:white;
+	padding:.39em;
+	padding-bottom:2em;
 	float: left;
-	clear: Both;
-	padding-bottom: 2em;
+	clear: Both;padding-bottom:4em;width: 100%;min-height: 4em;
 }
 #ndf_content ul li ul {
 	float: left; margin: .25em;padding-left: .25em;
@@ -132,7 +157,9 @@ float: left;
 
 #ndf_content ul p,#ndf_content ul strong{
 margin: 1.1em;
+	font-family: Palatino, "Lucida Grande", serif;
 }
+
 
 #ndf_content ul li.groupPropName{
 	width: 42.75em;
@@ -145,7 +172,8 @@ margin: 1.1em;
 }
 
 .groupPropName h2 {
-	margin-top: 0em;	
+	margin-top: 0em;width: 94.5%;
+	line-height: 1.5em;float: left;
 }
 
 #ndf_content ul ul ul ul ul li.DRUG_KIND {
@@ -224,8 +252,7 @@ margin: .15em .35em;
 }
 
 #ndf_content ul li.conceptName {
-	margin: 0 .55em;
-	font-weight: bold;
+	letter-spacing: .15em;
 }
 .a_title {font-size: 1.5em;padding: .8em 0 1.3em 0  ;
 	clear: both;
@@ -285,28 +312,41 @@ margin: .15em .35em;
 	font-style: italic;
 }
 
-#help {
-	width: 60em;
-	border-top: solid maroon .25em;
-	float: left;
+#help {padding:.5em;
+	border-bottom: solid black 1.25em;
+	float: left;width:100%;text-align:center;
+background-color:maroon;color:white;font-size:.95em;
+min-width:60em;
+}
+
+body {
+	width: 100%;margin: 0;
+}
+
+#help a{
+color:lightgray;
+}
+
+#help ul{
+
+
+width:100%;
+
+float:left;
 }
 
 #help ul li {
-	width: 19em;float: left;
-	padding: .5em;
+       width: 48%; float: left;
+	padding: -1em .5em;min-width:14em;
+ 
 }
 
-#help p {
-	clear: both;
-}
 
 #help img{
-	float: left;margin: 1em 3.18em;
+margin:0 11%;
+text-align:center;
 }
 
-#help ul li a{
-	text-align:center; width: 100%;
-}
 
 #stats {
 	display:none;
@@ -321,7 +361,7 @@ margin: .15em .35em;
 }
 
 .ndf_menu li{
-	float: left;width: 19em;text-align:center;
+	float: left;width: 18.27em;text-align:center;
 	font-weight: bold;padding: .5em 0;
 }
 
