--- a/public/css/ndf.css
+++ b/public/css/ndf.css
@@ -1,27 +1,53 @@
+/* @override http://myparse.net/git/rxNormRef_php/public/css/ndf.css */
+
 /* @override http://myparse.net/sb7/public//css/ndf.css */
 
 /* @override http://myparse.net/sb7/public/css/ndf.css */
 
+#ndf_content ul li p {
+	float: left; width: 90%;
+	margin: .85em 3em;
+}
+
+
+#ndf_content ul li ul li h4 {
+	clear: both;
+}
+
+#ndf_content ul.ndf_codes li {
+	float: left;width: 24%;padding:   .8em .2em;
+	border-top: solid maroon .1em;
+	text-align: center;
+	
+}
+
+#ndf_content ul li ul li h4 {
+	border: none; font-size: .95em; margin: 0;padding: 0;color: black;
+}
+
+
+#ndf_content ul.ndf_codes li em {
+	font-style: normal;
+	font-weight: bold;
+}
 
 #ndf_content ul {
-margin: 0 .35em ;
-}
-#ndf_content ul li.d_int_comment ul {
-width: 50em;clear: both;
-padding: 1em;
-margin: 1em 0;
-
-}
-#ndf_content ul li.interacting_drug ul {
-border: none;}
-
-#ndf_content ul li.interacting_drug ul li.nui {
-	border: none; width: auto;float: left;
+	width:100%;
 }
 
-va_status,vandf_record{
-padding: .25em;
+#ndf_content ul li h3 {
+color: maroon;
+clear: both;
+border-bottom:solid .1em black;
+margin:0;
+margin-bottom: .5em;
+margin-top: .75em;
 }
+
+#ndf_content ul li h2 {
+	text-align: center;margin-top: 2em;
+}
+
 html{background-color:maroon;
 	font-family: "Lucida Grande", Lucida, Verdana, sans-serif;
 }
@@ -41,12 +67,6 @@ float: left;
 background-color:white;padding:.39em;
 }
 
-/* @group My Group */
-
-
-
-/* @end */
-
 #header h1{
 	color: maroon;
 	font-weight: bold;
@@ -57,53 +77,10 @@ background-color:white;padding:.39em;
 float: right;clear:both; margin-right:1em;
 }
 
-#ndf_content ul li.pname {
-float: right;clear:left;margin: .95em;
-	font-style: italic;
-	text-decoration: none; border-right: solid maroon .25em;
-}
-
-
-
-#ndf_content ul li.pname ul li.conceptName a {
-	color: black;
-}
-
-li.gRole{
-width: 45em;
-text-align: center;
-}
-
-#ndf_content ul li.cname {clear: right;
-	width: 48%;
-	font-size: 1.21em;
-	margin: 0;
-	border-left: solid maroon .4em;margin: .15em 0;
-}
-
-#ndf_content ul li.cname:hover{
-	border-left: solid white .4em;
-
-}
-
-#ndf_content ul li.pname:hover{
-	
-	border-right-color: white;
-}
-
-.cname a{
-	color: navy;
-}
-
 
 
 a{
 	text-decoration: none;
-}
-
-#ndf_content ul li.pname ul li.conceptName a {
-	color: red;
-	margin-left:-1em
 }
 
 a:hover{
@@ -124,8 +101,9 @@ a:hover{
 
 
 ul{
-	list-style-type: none;margin: 0;padding: 0;
+	list-style-type: none;margin: 0;padding: 0;float: left;
 }
+
 
 	
 img.bg_black{
@@ -133,183 +111,14 @@ img.bg_black{
 }
 
 #ndf_content{background-color:white;
-	padding:.39em;
+	padding: 0 .59em;
 	float: left;
-	clear: Both;padding-bottom:1em;width: 100%;
-}
-#ndf_content ul li ul {
-	float: left; margin: .25em;padding-left: .25em;
+	clear: Both;padding-bottom:1em;width: 57.65em;
 }
 
-#ndf_content ul ul ul ul ul ul ul li ul {
-	margin: 0 1.35em;
-}
-
-#ndf_content ul ul ul ul ul ul ul li ul {
-border: none;
-float: left;
-}
-
-
-#ndf_content ul li {
-float: left;
-	margin: .0 .50em;
-}
-
-#ndf_content ul p,#ndf_content ul strong{
-margin: 0 2.8em; width: 22em; float: left;
-	font-family: Palatino, "Lucida Grande", serif;
-}
-
-#ndf_content ul li.groupPropName{
-	width: 42.75em;
-	clear:both;
-	margin-top: 1em;
-	color: maroon;
-	style:bold;
-	font-size: 1.4em;
-	letter-spacing:.1em;
-}
-
-.groupPropName h2 {
-	margin-top: 0em;width: 94.5%;
-	line-height: 1.5em;float: left;
-}
-
-#ndf_content ul ul ul ul ul li.DRUG_KIND {
-	float: right;
-}
-#ndf_content ul li.DRUG_KIND ul {
-	padding: .5em;
-	margin:  .35em;
-	font-weight: bold;
-	font-size: 1.2em;
-}
-#ndf_content ul li ul.gProperty li.gValue {
-	margin-top: .7em;width: 14.5em;
-	font-size: 1.2em;clear: both;
-}
-li.mesh_definition {
-	width: 27.7em;
-	text-align: left;
-	line-height: 1.55em;float:right;
-}
-
-li.group_t{
-	width: 13.76em;
-	padding: .05em 0;
-	border-bottom: solid gray .25em;
-	color: maroon;
-	font-weight: bold;
-	font-size: 1.2em;
-	text-align:left;
-	border-right: solid gray .25em;
-}
-
-
-#ndf_content ul li.MECHANISM_OF_ACTION_KIND,#ndf_content ul li.PHYSIOLOGIC_EFFECT_KIND,#ndf_content ul li.DISEASE_KIND,#ndf_content ul li.INGREDIENT_KIND {
-	min-height: 2.5em;
-	text-align: center;
-}
-li.propertyValue {width: 7em;
-	border-right: solid .25em maroon;padding: 0 .48em;text-align: right;
-	font-style: bold;color: maroon;
-}
-
-va_file,va_ien {
-	clear: both;float: left;
-	display: none;
-}
-
-#ndf_content ul li ul li ul li {
-	width: auto;
-}
-
-#ndf_content ul li ul li ul li.propertyValue {
-	width: 8em;
-	text-align: center;color: maroon;
-}
-
-#ndf_content li.nui {
-	border-top: solid maroon 2px;
-	width: 98%;
-	color: orangered;float: right;
-	padding-top: .25em;
-	text-align: right;
-}
-
-
-#ndf_content .gProperty{border: none;
-width: 18.0em;
-float: left;
-min-height: 5em;
-margin: .15em .35em;
-}
-
-#ndf_content ul li.gProperty strong {
-	width: 17.5em;margin-bottom: .5em;
-	float: left;
-}
-
-#ndf_content ul li.conceptName {
-	letter-spacing: .15em;
-}
-.a_title {font-size: 1.5em;padding: .8em 0 1.3em 0  ;
-	clear: both;
-	float: left;width: 100%;
-	margin-bottom: 4.44em;
-	text-align: left; color: maroon;
-}
-.property{
-	clear: both;
-	color: maroon;
-	float: left;
-	width: 31.6em;
-	font-weight: bold;
-	text-align: left;
-	font-size: 1.9em;
-	padding: .75em 0 .25em 0;
-	border: none;
-	}
-
-.record_rxcui{
-	font-weight: bold;
-	font-family: "Courier New", Courier, mono;
-	padding: .4em .55em;margin: 0;
-	width: 18.05em;
-	margin-bottom: .5em;
-	letter-spacing: .14em;background-color: lightgray;
-	z-index: -2;
-}
-
-.record_umlscui {
-	font-weight: bold;
-	float: right;
-	text-align: right;
-	width: 18.15em;
-	padding:  .3em .5em;
-	letter-spacing: .11em;
-	margin-top: .75em;
-	background-color: gray;
-}
-
-.record_umlscui a{
-	color: white;
-}
-
-.record_name {
-	clear: both;min-height: 3em;padding: .45em;text-align: right;
-	letter-spacing: .09em;width: 18.3em;
-	font-weight: bold;
-}
-
-.record_synonym{
-	font-size: .98em;
-	line-height: .99em;
-	text-align: center;
-	width: 18.8em;
-	padding: .4em;
-	font-style: italic;
+.int_name {
+color: red;padding-bottom: .5em;float: left;margin-bottom: .75em;
+width: 100%;border-bottom: dashed .1em;
 }
 
 #help {padding:.5em;
@@ -319,9 +128,6 @@ color:white;font-size:.95em;
 min-width:60em;padding-top: 1em;
 }
 
-body {
-	width: 100%;margin: 0;
-}
 
 #help a{
 color:white;
@@ -351,7 +157,7 @@ text-align:center;
 
 
 #stats {
-	display:none;
+	
 }
 
 .ndf_menu a:hover{
@@ -370,3 +176,12 @@ text-align:center;
 .ndf_menu a{
 	margin: 0;
 }
+
+#ndf_content ul li ul li ul li {
+	width: 18.5em;float: left;padding: .25em;text-align:center;
+}
+
+#ndf_content ul li ul li h4 {
+	padding: .55em 0;
+}
+
